--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,12 @@ readme = "README.md"
 requires-python = ">=3.12,<3.13"
 dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
-    "uvicorn[standard] (>=0.35.0,<0.36.0)"
+    "uvicorn[standard] (>=0.35.0,<0.36.0)",
+    "pydantic (>=2.11.7,<3.0.0)",
+    "numpy (>=2.3.2,<3.0.0)",
+    "pandas (>=2.3.1,<3.0.0)",
+    "wordfreq (>=3.1.1,<4.0.0)",
+    "spacy (>=3.8.7,<4.0.0)"
 ]
 
 
